# sky-renderer

./: .gitignore  CLAUDE.md  Cargo.toml  OPENGL.md  RADAR PRIMITIVES.md  README.md  ROADMAP.md  TODO.md  build.rs
cpp/: CMakeLists.txt  glrenderer.cpp  glrenderer.h
examples/: geometry.rs  geometry_transform.rs  hello_geometry.rs  hello_triangle.rs  instancing.rs  instancing_2.rs  shapes.rs  shapes_with_zoom.rs  shapes_zoom.rs  svgexport.rs  transform.rs  transforms.rs  triangle.rs  triangle_projection.rs  triangle_transform.rs  waypoints.rs  window.rs
examples/bouncing_balls/: Cargo.toml
examples/bouncing_balls/src/: main.rs
examples/bouncing_balls_instanced/: Cargo.toml
examples/bouncing_balls_instanced/src/: main.rs
examples/bouncing_balls_mt/: Cargo.toml
examples/bouncing_balls_mt/src/: main.rs
examples/bouncing_balls_ws_client/: Cargo.toml
examples/bouncing_balls_ws_client/src/: main.rs
examples/bouncing_balls_ws_server/: Cargo.toml
examples/bouncing_balls_ws_server/src/: main.rs
examples/shaders/: waypoints.geom  waypoints.vert
examples/shaders_src/: geometry.vert  waypoints.vert
src/: lib.rs
src/core/: app.rs  color.rs  drawable.rs  geometry.rs  image.rs  mesh.rs  mod.rs  renderer.rs  shader.rs  texture.rs  window.rs
src/core/engine/: freetype.rs  glfw.rs  mod.rs  opengl.rs
src/engine/: mod.rs  opengl.rs
src/graphics2d/: mod.rs  renderable.rs  shape.rs  shaperenderable.rs  svg.rs  svgdocument.rs
src/graphics2d/shaders/: image.frag  image.vert  point.frag  shape.frag  shape.vert
src/graphics2d/shapes/: mod.rs  shaperenderable.rs
src/renderer/: opengl.rs
src/windowing/: glfw.rs
