[package]
name = "sky_renderer"
version = "0.1.7"
edition = "2024"
authors = ["Anwar Ludin anwar.ludin@algonents.com"]
license = "MIT"

description = "A minimalistic 2D rendering engine"
repository = "https://github.com/algonents/sky-renderer"
readme = "README.md"
keywords = ["opengl", "visualization", "2D"]
categories = ["graphics", "rendering", "api-bindings"]

[dependencies]
glam = "0.30.4"


[build-dependencies]

cmake = "0.1.52"
