[package]
name = "sky_renderer"
version = "0.2.0"
edition = "2024"
authors = ["Anwar Ludin anwar.ludin@algonents.com"]
license = "MIT"

description = "A minimalistic 2D data rendering engine"
repository = "https://github.com/algonents/sky-renderer"
readme = "README.md"
keywords = ["opengl", "visualization", "graphics2D"]
categories = ["graphics", "rendering", "api-bindings"]

[dependencies]
glam = "0.30.4"
image = "0.25.6"

[build-dependencies]
cmake = "0.1.52"

[workspace]
members = [
    ".",
]