[package]
name = "sky_renderer"
version = "0.5.1"
edition = "2024"
authors = ["Anwar Ludin anwar.ludin@algonents.com"]
license = "MIT"

description = "[DEPRECATED: use wilhelm_renderer instead] A minimalist 2D data rendering engine"
repository = "https://github.com/algonents/sky-renderer"
readme = "README.md"
keywords = ["opengl", "visualization", "deprecated"]
categories = ["graphics", "rendering::graphics-api"]

[badges]
maintenance = { status = "deprecated" }

[dependencies]
glam = "0.30.4"
image = "0.25.6"

[build-dependencies]
cmake = "0.1.52"
